--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-manim>=0.19.0
+# Core dependencies with compatible versions
+manim>=0.18.1,<0.19.0
 openai>=1.0.0
 PyYAML>=6.0
 imageio-ffmpeg>=0.4.0
 google-generativeai>=0.4.0
+
+# Pin setuptools to avoid pkg_resources deprecation issues
+setuptools>=65.0,<81.0
